apps/platform/bentopdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bentopdf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bentopdf
    spec:
      containers:
        - name: bentopdf
          image: bentopdf/bentopdf:latest
          ports:
            - name: http
              containerPort: 80
